--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong>11112048 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
